--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 /* Navigation Bar */
 nav {
-    background-color: #333;
+    background-color: #726f6f;
     color: #fff;
     padding: 20px;
 }
